--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
-  "name": "tweet-delete",
+  "name": "delete-my-tweets",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "A simple browser script for deleting your tweets and retweets directly from your X/Twitter's profile page. Use it at your own risk.",
+  "author": "nahuelhds@gmail.com",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nahuelhds/delete-my-tweets.git"
   },
-  "private": true
+  "scripts": {
+    "dev": "pkgroll --watch src/index.ts",
+    "build": "pkgroll src/index.ts",
+    "start:watch": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts"
+  },
+  "devDependencies": {
+    "chrome-types": "^0.1.335",
+    "pkgroll": "^2.6.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
+  },
+  "type": "module",
+  "exports": "./dist/index.mjs"
 }
