--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "happy-dom": "^16.8.1",
+    "prettier": "3.4.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.21.0",
     "vite": "^6.0.11",
