--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "scripts": {
+    "dev:debug": "vite",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "format": "npx prettier --write .",
