--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:debug": "vite",
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "format": "npx prettier --write .",
+    "format": "npx prettier --check .",
+    "format:fix": "npx prettier --write .",
     "lint": "eslint .",
     "lint:fix": "npx eslint --fix .",
     "preview": "vite preview",
