--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "hello.html",
-    "default_icon": "../assets/asshello_extensions.png"
+    "default_popup": "index.html",
+    "default_icon": "./img/trash.svg"
   }
 }
