--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.4",
     "chrome-types": "^0.1.335",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
