Content scripting integration

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,10 @@
   "description": "Delete your tweets and retweets directly from your X/Twitter's profile page.",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
   "action": {
     "default_popup": "index.html",
     "default_icon": "./img/trash.svg"
