--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "scripts": {
     "dev:debug": "vite",
     "dev": "vite",
-    "build:watch": "tsc -b && vite build --watch",
-    "build": "tsc -b && vite build",
+    "build:watch": "tsc -b && vite build --watch & vite build --config vite.config.lib.ts --watch",
+    "build:app": "tsc -b && vite build",
+    "build:lib": "tsc -b && vite build --config vite.config.lib.ts",
     "format": "npx prettier --check .",
     "format:fix": "npx prettier --write .",
     "lint": "eslint .",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.30",
     "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
